--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h1 class="h-primary center">Our Services</h1>
         <div id="services">
             <div class="box">
-                <img src="images.PNG" alt="">
+                <img src="https://github.com/vaasanth1711/my-web/blob/main/images.png?raw=true" alt="">
                 <h2 class="h-secondary center">Food Catering</h2>
                 <p class="center">Food catering refers to the business of providing food and beverage
 		 services for events or gatherings. Caterers typically prepare, deliver, and serve meals
